--- a/Develop/style.css
+++ b/Develop/style.css
@@ -43,17 +43,17 @@ textarea{
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #eb3636;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #35abf0;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #3acc3a;
   color: white;
 }
 
